--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=decive-width, initial-scare=1">
+        <title>
+            Holy shit i made a website.
+        </title>
     </head>
 
     <body>
         <b>big wowzers!</b>
     </body>
-
-
 </html>
