--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=decive-width, initial-scare=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css"/>
         <title>
-            Holy shit i made a website.
+            Shiro's Something
         </title>
     </head>
 
     <body>
-        <b>big wowzers!</b>
+        <h1>Shiro's Something</h1>
     </body>
 </html>
