more messing around + adding css file

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
 
     <body>
         <h1>Shiro's Something</h1>
+        <ul>
+            <li>
+                <a href="#home" target="_blank">Home</a>
+            </li>
+
+
+
+
+        </ul>
+        <button> 
+            <a href="#home">Home</a> 
+        </button>
     </body>
 </html>
