few buttons designs + blog.html added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=decive-width, initial-scare=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css"/>
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css"/>
+        -->
+        <link rel="stylesheet" href="styles.css">
         <title>
             Shiro's Something
         </title>
@@ -20,8 +22,11 @@
 
 
         </ul>
-        <button> 
-            <a href="#home">Home</a> 
+        <button class="button1"> 
+            Home 
+        </button>
+        <button class="button2"> 
+            Blog
         </button>
     </body>
 </html>
